<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graybg">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/security"
        android:textColor="@color/lightblack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pinkcard"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/f0737b"
        app:cardCornerRadius="16dp"
        app:cardElevation="16dp"
        app:layout_constraintBottom_toTopOf="@+id/greencard"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />
    <TextView
        android:id="@+id/SOS"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sos"
        android:textStyle="bold"
        android:elevation="16dp"
        app:layout_constraintStart_toStartOf="@id/pinkcard"
        app:layout_constraintTop_toTopOf="@id/pinkcard"
        android:textSize="24sp"
        />
    <TextView
        android:id="@+id/sosmsg"
        android:textColor="@color/white"
        android:elevation="16dp"
        app:layout_constraintStart_toStartOf="@id/pinkcard"
        app:layout_constraintEnd_toStartOf="@id/sosimg"
        app:layout_constraintTop_toBottomOf="@id/SOS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/in_case_of_emergency_keep_inform_family_members_to_contact_me"/>

    <ImageView
        android:id="@+id/sosimg"
        android:layout_width="149dp"
        android:layout_height="270dp"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:src="@drawable/ic_sos"
        app:layout_constraintBottom_toBottomOf="@id/pinkcard"
        app:layout_constraintEnd_toEndOf="@id/pinkcard"
        app:layout_constraintTop_toTopOf="@id/pinkcard"/>



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/greencard"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        app:cardElevation="16dp"
        app:cardBackgroundColor="@color/_46617c"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pinkcard"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp"/>

    <TextView
        android:id="@+id/GUARD"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guard"
        android:textStyle="bold"
        android:elevation="16dp"
        app:layout_constraintStart_toStartOf="@id/greencard"
        app:layout_constraintTop_toTopOf="@id/greencard"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/guardmsg"
        android:textColor="@color/white"
        android:elevation="16dp"
        app:layout_constraintStart_toStartOf="@id/greencard"
        app:layout_constraintEnd_toStartOf="@id/police"
        app:layout_constraintTop_toBottomOf="@id/GUARD"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/open_when_you_are_a_potentially_dangerous_situation"/>

    <ImageView
        android:id="@+id/police"
        android:layout_width="149dp"
        android:layout_height="270dp"
        android:src="@drawable/ic_police"
        android:elevation="16dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="@id/greencard"
        app:layout_constraintBottom_toBottomOf="@id/greencard"
        app:layout_constraintEnd_toEndOf="@id/greencard"/>





</androidx.constraintlayout.widget.ConstraintLayout>